--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,28 +5,51 @@ on:
     branches: [ master, main ]
   workflow_dispatch:
 
+concurrency:
+  group: "build"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up JDK 18
-        uses: actions/setup-java@v3
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          java-version: '18'
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
           distribution: 'temurin'
           cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew make
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: CloudstreamExtensions
-          path: "**/*.cs3"
-          retention-days: 1
+      - name: Build extensions
+        run: |
+          ./gradlew make makePluginsJson
+          
+      - name: Push to builds branch
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git checkout --orphan builds
+          git reset
+          
+          # Copy all .cs3 files to root
+          find . -name "*.cs3" -exec cp {} . \;
+          
+          # Copy plugins.json if it exists
+          if [ -f "build/plugins.json" ]; then
+            cp build/plugins.json .
+          fi
+          
+          # Add and commit
+          git add *.cs3 plugins.json 2>/dev/null || git add *.cs3
+          git commit -m "Build: $(date +'%Y-%m-%d %H:%M:%S')" || exit 0
+          git push -f origin builds
